--- a/views/components/contact.ejs
+++ b/views/components/contact.ejs
@@ -8,7 +8,7 @@
   </svg>
 
   <h1 class="text-black text-center pb-5 display-2 mt-5">All my links</h1>
-  <div class="container">
+  <div class="container to-appear">
     <div class="row"><%- include('../template/links.ejs') %></div>
   </div>
 </section>
