--- a/views/components/start.ejs
+++ b/views/components/start.ejs
@@ -1,4 +1,4 @@
-<section id="home" class="start-section">
+<section id="home" class="start-section to-appear">
   <div class="container mt-5">
     <!-- Left Column -->
     <div class="row">
