--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,5 +16,6 @@
     </main>
 
     <script src="/js/bootstrap.bundle.js"></script>
+    <script src="/js/functions.js"></script>
   </body>
 </html>
