--- a/views/components/portfolio.ejs
+++ b/views/components/portfolio.ejs
@@ -6,9 +6,10 @@
       d="M0,0L48,37.3C96,75,192,149,288,170.7C384,192,480,160,576,149.3C672,139,768,149,864,144C960,139,1056,117,1152,144C1248,171,1344,245,1392,282.7L1440,320L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"
     ></path>
   </svg>
+
   <h1 class="text-light text-center pb-5 display-2 mt-5">Portfolio</h1>
 
-  <div class="container pb-5 w-100 d-flex justify-content-center">
+  <div class="container pb-5 w-100 d-flex justify-content-center to-appear">
     <!-- Carousel -->
     <div class="row">
       <div class="col-12">
