--- a/views/components/services.ejs
+++ b/views/components/services.ejs
@@ -7,7 +7,7 @@
     ></path>
   </svg>
   <h1 class="text-black text-center pb-5 display-2 mt-5">Services</h1>
-  <div class="container pb-5 w-100 d-flex justify-content-center">
+  <div class="container pb-5 w-100 d-flex justify-content-center to-appear">
     <div class="row pb-3">
       <!-- Front-End Card -->
       <div class="col-lg-4 d-flex justify-content-center">
